# ed448goldilocks

./: CMakeLists.txt  Makefile
_aux/ristretto/: ristretto.sage
src/: CMakeLists.txt  shake.c
src/curve25519/: CMakeLists.txt
src/ed448goldilocks/: CMakeLists.txt
src/gen_headers/: curve_data.py
src/generator/: template.py
src/generator/curve25519/: CMakeLists.txt
src/generator/ed448goldilocks/: CMakeLists.txt
src/include/: word.h
src/p25519/: CMakeLists.txt
src/p448/: CMakeLists.txt
src/per_curve/: decaf.tmpl.c  decaf_gen_tables.tmpl.c  eddsa.tmpl.c  eddsa.tmpl.h  eddsa.tmpl.hxx  elligator.tmpl.c  scalar.tmpl.c
src/per_field/: f_field.tmpl.h  f_generic.tmpl.c
src/public_include/decaf/: common.h
test/: test_decaf.cxx  vectors.inc.c  vectors.inc.cxx
